<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">M3U Viewer</string>

    <string name="action_open_m3u_url">Open M3U Playlist URL</string>
    <string name="action_open_m3u_file">Open M3U Playlist File</string>
    <string name="action_search">Search</string>
    <string name="action_sort_sequential">Sort Sequentially</string>
    <string name="action_sort_alphabetic">Sort Alphabetic</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>

    <string name="button_open">Open</string>
    <string name="button_cancel">Cancel</string>

    <string name="dialog_open_m3u_url_title">Enter URL</string>
    <string name="dialog_open_m3u_url_button_positive">@string/button_open</string>
    <string name="dialog_open_m3u_url_button_negative">@string/button_cancel</string>

    <string name="toast_error_no_app_found">No video player app found</string>

  <!-- Settings: Default M3U Playlist URL -->
  <string translatable="false" name="pref_default_m3u_url_key">pref_default_m3u_url</string>
  <string name="pref_default_m3u_url_title">Default M3U Playlist URL</string>
  <string name="pref_default_m3u_url_summary">Initial value in \"Open M3U Playlist URL\" dialog.</string>
  <string translatable="false" name="pref_default_m3u_url_hint">https://example.com/playlist.m3u</string>
  <string translatable="false" name="pref_default_m3u_url_default"></string>

  <!-- Settings: Channel URL Template -->
  <string translatable="false" name="pref_channel_url_template_key">pref_channel_url_template</string>
  <string name="pref_channel_url_template_title">Channel URL Template</string>
  <string name="pref_channel_url_template_summary">When any channel URL in the M3U does not begin with \"http\", parse it as a comma-separated list of values for substitution into this URL template.</string>
  <string translatable="false" name="pref_channel_url_template_hint">http://kytv.xyz:80/MY-USERNAME/MY-PASSWORD/%1$s.ts</string>
  <string translatable="false" name="pref_channel_url_template_default"></string>
</resources>
