<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:title="@string/app_name">

    <EditTextPreference
      android:key="@string/pref_default_m3u_url_key"
      android:title="@string/pref_default_m3u_url_title"
      android:summary="@string/pref_default_m3u_url_summary"
      android:inputType="text"
      android:hint="@string/pref_default_m3u_url_hint"
      android:defaultValue="@string/pref_default_m3u_url_default" />

    <EditTextPreference
      android:key="@string/pref_channel_url_template_key"
      android:title="@string/pref_channel_url_template_title"
      android:summary="@string/pref_channel_url_template_summary"
      android:inputType="text"
      android:hint="@string/pref_channel_url_template_hint"
      android:defaultValue="@string/pref_channel_url_template_default" />

  </PreferenceCategory>
</PreferenceScreen>
