<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_open_m3u_url"
        android:orderInCategory="1"
        android:title="@string/action_open_m3u_url"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_m3u_file"
        android:orderInCategory="2"
        android:title="@string/action_open_m3u_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:orderInCategory="3"
        android:title="@string/action_search"
        android:icon="@drawable/baseline_search_black_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort_sequential"
        android:orderInCategory="4"
        android:title="@string/action_sort_sequential"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_alphabetic"
        android:orderInCategory="5"
        android:title="@string/action_sort_alphabetic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="6"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
